RESOLVED FIXED79589
Mouse tracking incorrect in Silverlight when using multi monitor with offset arrangement
https://bugs.webkit.org/show_bug.cgi?id=79589
Summary Mouse tracking incorrect in Silverlight when using multi monitor with offset ...
Anders Carlsson
Reported 2012-02-25 17:56:06 PST
Mouse tracking incorrect in Silverlight when using multi monitor with offset arrangement
Attachments
Patch (3.01 KB, patch)
2012-02-25 17:58 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2012-02-25 17:58:13 PST
Anders Carlsson
Comment 2 2012-02-25 18:00:04 PST
Note You need to log in before you can comment on or make changes to this bug.