Mouse tracking incorrect in Silverlight when using multi monitor with offset arrangement https://bugs.webkit.org/show_bug.cgi?id=79589 <rdar://problem/9719592>

Reviewed by Sam Weinig.

In the Carbon event model, mouse event coordinates are flipped relative to the first screen,
whereas the coordinates we get from the WebMouseEvent are flipped relative to the screen where
the containing WKView is on.

Instead of passing the global coordinates to NPP_HandleEvent, convert them to the flipped screen coordinate
system that the plug-in expects.

* WebProcess/Plugins/Netscape/mac/NetscapePluginMac.mm:
(WebKit::NetscapePlugin::platformHandleMouseEvent):

Canonical link: https://commits.webkit.org/96689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@108919 268f45cc-cd09-0410-ab3c-d52691b4dbfc